# wax-blockchain-legacy

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  UPGRADE_TO_1_8_1.md  WAX_PORTING_NOTES.md  WAX_RELEASE_NOTES.md  Waxdau-blockchain-legacy  eosio_build.sh  wax_build.sh  wax_install.sh  wax_uninstall.sh
.buildkite/: debug.yml  long_running_tests.yml  pipeline.yml
.cicd/: submodule-regression-check.sh
.github/: PULL_REQUEST_TEMPLATE.md
contracts/eosio.system/: eosio.system.hpp  producer_pay.cpp
contracts/eosiolib/: core_symbol.hpp.in
libraries/chain/: controller.cpp  genesis_intrinsics.cpp  wasm_interface.cpp
libraries/testing/: contracts.hpp.in  tester.cpp
mainnet/: README.md  cleos.sh  config.ini  genesis.json  nodeos.sh
patches/fc/: CMakeLists.txt.patch  README.md  apply_patch.sh
plugins/chain_plugin/: chain_plugin.cpp
plugins/net_plugin/: net_plugin.cpp
plugins/producer_plugin/: producer_plugin.cpp
programs/eosio-launcher/: main.cpp
samples/eos-studio/: README.md  prepare-eosstudio-for-wax.sh
samples/hello-world/: CMakeLists.txt  Makefile  README.md  build.sh  hello-world.cpp
samples/mainnet/: README.md  config.ini  nodeos.sh
scripts/: CMakeLists.txt  eosio_build.sh  eosio_install.sh  wax-tn_bounce.sh  wax-tn_down.sh  wax-tn_roll.sh  wax-tn_up.sh  wax_build_darwin.sh
unittests/: CMakeLists.txt  bootseq_tests.cpp  contracts.hpp.in  currency_tests.cpp  eosio_system_tester.hpp  ram_tests.cpp
unittests/test-contracts/wax_rsa/: CMakeLists.txt  wax_rsa.abi  wax_rsa.cpp  wax_rsa.wasm
(+15 files in other folders)
